# bmo

./: .cz.toml  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md
.claude/: CLAUDE.md  settings.json
.codex/: config.toml
.cursor/rules/: PROJECT.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: frontend-ci.yml
backend/: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
backend/docker/: .dockerignore  Dockerfile
backend/src/bmo_backend/: __init__.py  config.py  database.py  main.py  models.py  project_service.py  template_registry.py  terminal_manager.py  utils.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/i18n/: README.ar.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/docker/: .dockerignore  .gitignore  Dockerfile
frontend/e2e/: example.spec.ts
frontend/scripts/: sync-tw-animate.mjs
frontend/src/__tests__/: database-registry.test.ts  example.test.ts
frontend/src/app/: globals.css  layout.tsx  tw-animate.css
frontend/src/components/: preview-bridge.tsx
frontend/src/lib/: orchestrator-api.ts  projects.ts  template-registry.ts
templates/bmo-template-base/: README.md  bmo-template.json
templates/official/blank-project/: README.md  bmo-template.json
templates/official/fastapi-service/: README.md  bmo-template.json
(+176 files in other folders)
