[project]
name = "bmo-backend"
version = "0.1.0"
description = "BMO backend API (local, Docker-run developer workspace platform)."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "../LICENSE" }
authors = [{ name = "BMO contributors" }]
dependencies = [
  "fastapi~=0.135.1",
  "uvicorn[standard]~=0.41.0",
  "pydantic>=2.12.0,<3",
  "pydantic-settings~=2.13.1",
]

[project.optional-dependencies]
dev = [
  "pytest~=9.0.2",
  "pytest-cov~=7.0.0",
  "ruff~=0.15.5",
]

