[project]
name = "bmo-backend"
version = "0.1.0"
description = "BMO backend API (local, Docker-run developer workspace platform)."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [{ name = "BMO contributors" }]
dependencies = [
  "fastapi~=0.135.1",
  "uvicorn[standard]~=0.41.0",
  "pydantic>=2.12.0,<3",
  "pydantic-settings~=2.13.1",
]

[project.scripts]
bmo-backend = "bmo_backend.main:run"

[project.optional-dependencies]
dev = [
  "pytest~=9.0.2",
  "pytest-cov~=7.0.0",
  "ruff~=0.15.5",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
